name:                foo
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Foo
  build-depends:       base
  default-language:    Haskell2010

test-suite test
  type: detailed-0.9
  test-module: Test
  build-depends: base, foo, Cabal
  default-language:    Haskell2010
